--- a/index.html
+++ b/index.html
@@ -4,52 +4,147 @@
   <meta charset="UTF-8">
   <title>Currículo do Aluno</title>
   <style>
-    body { font-family: Arial, sans-serif; margin: 20px; color: #333; }
-    header { display: flex; align-items: center; margin-bottom: 20px; }
-    header img { border-radius: 50%; width: 100px; height: 100px; margin-right: 20px; }
-    h1 { margin: 0; }
-    .details, .grades { width: 100%; border-collapse: collapse; margin-bottom: 20px; }
-    .details td { padding: 8px; border: 1px solid #ddd; }
-    .section-header { background: #f4f4f4; padding: 10px; margin: 20px 0 10px; font-weight: bold; }
-    select { padding: 5px; margin-bottom: 10px; }
-    .grades th, .grades td { padding: 8px; border: 1px solid #ddd; }
-    .grades th { background: #eee; }
-    .footer { margin-top: 40px; color: #777; font-size: 0.9em; }
+    body {
+      font-family: sans-serif;
+      margin: 0;
+      background-color: #f9f9f9;
+    }
+    .container {
+      display: flex;
+    }
+    .sidebar {
+      width: 200px;
+      background-color: #f3f3f3;
+      height: 100vh;
+      padding: 20px;
+      box-sizing: border-box;
+    }
+    .sidebar h3 {
+      font-size: 16px;
+      margin-bottom: 10px;
+    }
+    .sidebar ul {
+      list-style: none;
+      padding-left: 0;
+    }
+    .sidebar ul li {
+      padding: 5px 0;
+      font-size: 14px;
+    }
+    .content {
+      padding: 30px;
+      flex-grow: 1;
+      background-color: white;
+    }
+    h1 {
+      font-size: 22px;
+      margin-top: 0;
+    }
+    .student-header {
+      display: flex;
+      justify-content: space-between;
+      align-items: center;
+    }
+    .student-info {
+      font-size: 16px;
+    }
+    .student-photo {
+      width: 90px;
+      border: 1px solid #ccc;
+    }
+    table {
+      border-collapse: collapse;
+      width: 100%;
+      margin-top: 20px;
+      font-size: 14px;
+    }
+    td, th {
+      border: 1px solid #ddd;
+      padding: 6px 10px;
+      text-align: left;
+    }
+    th {
+      background-color: #f4f4f4;
+    }
+    .section {
+      margin-top: 40px;
+    }
+    .legend {
+      font-size: 12px;
+      margin-top: 40px;
+    }
+    .footer {
+      margin-top: 40px;
+      text-align: center;
+      font-size: 13px;
+      color: #888;
+    }
   </style>
 </head>
 <body>
-  <header>
-    <img src="https://mrbeemaia.github.io/profile.jpg" alt="Student Photo">
-    <h1>Currículo do Aluno ― João Silva (123456)</h1>
-  </header>
 
-  <table class="details">
-    <tr><td><strong>Data de Início</strong></td><td>01-09-2023</td></tr>
-    <tr><td><strong>Número</strong></td><td>123456</td></tr>
-    <tr><td><strong>Curso</strong></td><td>Engenharia Naval e Oceânica</td></tr>
-    <tr><td><strong>Estado Atual</strong></td><td>Matriculado</td></tr>
-  </table>
-
-  <div class="section-header">Visualizar</div>
-  <select>
-    <option>Plano curricular mais recente</option>
-  </select>
-
-  <table class="grades">
-    <thead>
-      <tr>
-        <th>Disciplina</th><th>Nota</th><th>ECTS</th><th>Status</th>
-      </tr>
-    </thead>
-    <tbody>
-      <tr><td>Química Geral</td><td>13</td><td>6.0</td><td>Aprovado</td></tr>
-      <tr><td>Fundamentos da Programação</td><td>15</td><td>6.0</td><td>Aprovado</td></tr>
-      <tr><td>Relatividade</td><td>–</td><td>3.0</td><td>Inscrito</td></tr>
-    </tbody>
-  </table>
-
-  <div class="footer">
-    Powered by FenixEdu™ — Instituto Superior Técnico
+<div class="container">
+  <div class="sidebar">
+    <h3>Menu</h3>
+    <ul>
+      <li>Currículo</li>
+      <li>Calendário</li>
+      <li>Cedência de Dados</li>
+      <li>Estatísticas</li>
+      <li>Horário</li>
+      <li>Disciplinas</li>
+      <li>Projetos</li>
+      <li>Turmas</li>
+      <li>Serviços Académicos</li>
+    </ul>
   </div>
+
+  <div class="content">
+    <div class="student-header">
+      <div class="student-info">
+        <h1>Currículo do Aluno</h1>
+        <p>Aluno: João Silva (123456) – Bilhete de Identidade (12345678)</p>
+      </div>
+      <img class="student-photo" src="https://mrbeemaia.github.io/profile.jpg" alt="Foto do Aluno">
+    </div>
+
+    <h2>Detalhes da Matrícula</h2>
+    <table>
+      <tr><td><strong>Data de Início</strong></td><td>01-09-2023</td></tr>
+      <tr><td><strong>Número</strong></td><td>123456</td></tr>
+      <tr><td><strong>Curso</strong></td><td>Licenciatura em Engenharia Naval e Oceânica</td></tr>
+      <tr><td><strong>Estado Atual</strong></td><td>Matriculado</td></tr>
+      <tr><td><strong>Acordo</strong></td><td>Normal</td></tr>
+      <tr><td><strong>Inscrições no Ano Corrente</strong></td><td>13</td></tr>
+    </table>
+
+    <div class="section">
+      <h2>Plano Curricular</h2>
+      <p><strong>Plano:</strong> LENO 2021 — Início: 28.08.2023</p>
+      <table>
+        <thead>
+          <tr>
+            <th>Disciplina</th><th>Nota</th><th>Peso</th><th>ECTS</th><th>Estado</th><th>Ano</th><th>Semestre</th>
+          </tr>
+        </thead>
+        <tbody>
+          <tr><td>Química Geral</td><td>13</td><td>6.0</td><td>6.0</td><td>EN</td><td>2023/2024</td><td>1º</td></tr>
+          <tr><td>Fundamentos da Programação</td><td>15</td><td>6.0</td><td>6.0</td><td>EN</td><td>2023/2024</td><td>2º</td></tr>
+          <tr><td>Relatividade</td><td>-</td><td>3.0</td><td>3.0</td><td>EN</td><td>2024/2025</td><td>2º</td></tr>
+          <tr><td>Introdução à Mecânica Quântica</td><td>-</td><td>3.0</td><td>3.0</td><td>EN</td><td>2024/2025</td><td>2º</td></tr>
+        </tbody>
+      </table>
+    </div>
+
+    <div class="legend">
+      <p><strong>Lenda:</strong> m() mínimo, c() créditos no grupo, M() máximo, EN: Época Normal</p>
+    </div>
+
+    <div class="footer">
+      Powered by FenixEdu™ – Instituto Superior Técnico
+    </div>
+  </div>
+</div>
+
 </body>
 </html>
