--- a/index.html
+++ b/index.html
@@ -29,14 +29,16 @@
         .ist-logo {
             width: 120px;
             height: 40px;
-            background: linear-gradient(135deg, #1e3a8a 0%, #3b82f6 100%);
             display: flex;
             align-items: center;
             justify-content: center;
-            color: white;
-            font-weight: bold;
-            font-size: 14px;
             border-radius: 4px;
+        }
+
+        .ist-logo img {
+            max-width: 100%;
+            max-height: 100%;
+            object-fit: contain;
         }
 
         .main-content {
@@ -299,7 +301,7 @@
 <body>
     <div class="top-header">
         <div class="ist-logo">
-            IST LOGO
+            <img src="ist-logo.png" alt="IST Logo">
         </div>
         <div>
             <span style="font-weight: bold; color: #666;">Instituto Superior Técnico - Universidade de Lisboa</span>
@@ -315,9 +317,7 @@
                 </div>
             </div>
             <div class="student-photo">
-                <div class="photo-placeholder">
-                    👤
-                </div>
+                <img src="student.jpg" alt="Foto do Estudante">
             </div>
         </div>
 
