--- a/notas-tcn.html
+++ b/notas-tcn.html
@@ -14,7 +14,7 @@
     <div class="row" style="padding-top:50px; padding-bottom:25px;">
       <div class="col-sm-9">
         <a href="http://tecnico.ulisboa.pt" target="_blank">
-          <img class="logo" src="https://fenix.tecnico.ulisboa.pt/api/bennu-portal/configuration/logo" alt="IST Logo">
+          <img class="logo" src="https://fenix.tecnico.ulisboa.pt/api/bennu-portal/configuration/logo" alt="IST Logo" />
         </a>
       </div>
     </div>
@@ -52,8 +52,19 @@
         </thead>
         <tbody>
           <tr>
-            <td nowrap>ist999999</td>
-            <td nowrap>999999</td>
+            <td nowrap>ist1105555</td>
+            <td nowrap>105555</td>
+            <td nowrap>Joana Marques Pereira</td>
+            <td nowrap>LENO 2021</td>
+            <td nowrap>15</td>
+            <td nowrap>13</td>
+            <td nowrap>4</td>
+            <td nowrap>AP</td>
+            <td nowrap>11</td>
+          </tr>
+          <tr>
+            <td nowrap>ist1106666</td>
+            <td nowrap>106666</td>
             <td nowrap><strong>André Duarte Maia</strong></td>
             <td nowrap>LENO 2021</td>
             <td nowrap>14</td>
@@ -61,6 +72,193 @@
             <td nowrap>3</td>
             <td nowrap>AP</td>
             <td nowrap>12</td>
+          </tr>
+          <tr>
+            <td nowrap>ist1107777</td>
+            <td nowrap>107777</td>
+            <td nowrap>Maria Silva Costa</td>
+            <td nowrap>LENO 2021</td>
+            <td nowrap>12</td>
+            <td nowrap>9</td>
+            <td nowrap>3</td>
+            <td nowrap>AP</td>
+            <td nowrap>10</td>
+          </tr>
+          <tr>
+            <td nowrap>ist1109323</td>
+            <td nowrap>109323</td>
+            <td nowrap>Manuel Fernandes de Magalhães</td>
+            <td nowrap>LENO 2021</td>
+            <td nowrap>12</td>
+            <td nowrap>12</td>
+            <td nowrap>4</td>
+            <td nowrap>AP</td>
+            <td nowrap>7</td>
+          </tr>
+          <tr>
+            <td nowrap>ist1109329</td>
+            <td nowrap>109329</td>
+            <td nowrap>Mariana Fontes Pereira</td>
+            <td nowrap>LENO 2021</td>
+            <td nowrap>16</td>
+            <td nowrap>15</td>
+            <td nowrap>5</td>
+            <td nowrap>AP</td>
+            <td nowrap>13</td>
+          </tr>
+          <tr>
+            <td nowrap>ist1109396</td>
+            <td nowrap>109396</td>
+            <td nowrap>Martim Maria Correia Severino Coelho</td>
+            <td nowrap>LENO 2021</td>
+            <td nowrap>11</td>
+            <td nowrap>7</td>
+            <td nowrap>3</td>
+            <td nowrap>AP</td>
+            <td nowrap>10</td>
+          </tr>
+          <tr>
+            <td nowrap>ist1109484</td>
+            <td nowrap>109484</td>
+            <td nowrap>Lia Madeira Fernandes</td>
+            <td nowrap>LENO 2021</td>
+            <td nowrap>12</td>
+            <td nowrap>12</td>
+            <td nowrap>3</td>
+            <td nowrap>AP</td>
+            <td nowrap>10</td>
+          </tr>
+          <tr>
+            <td nowrap>ist1109495</td>
+            <td nowrap>109495</td>
+            <td nowrap>Gustavo Neto Rocha</td>
+            <td nowrap>LENO 2021</td>
+            <td nowrap>14</td>
+            <td nowrap>10</td>
+            <td nowrap>4</td>
+            <td nowrap>AP</td>
+            <td nowrap>14</td>
+          </tr>
+          <tr>
+            <td nowrap>ist1109633</td>
+            <td nowrap>109633</td>
+            <td nowrap>João Tomás Serrano Raposo</td>
+            <td nowrap>LENO 2021</td>
+            <td nowrap>12</td>
+            <td nowrap>10</td>
+            <td nowrap>3</td>
+            <td nowrap>AP</td>
+            <td nowrap>11</td>
+          </tr>
+          <tr>
+            <td nowrap>ist1109668</td>
+            <td nowrap>109668</td>
+            <td nowrap>Celso Alexandre Alves Salvador</td>
+            <td nowrap>LENO 2021</td>
+            <td nowrap>16</td>
+            <td nowrap>16</td>
+            <td nowrap>3</td>
+            <td nowrap>AP</td>
+            <td nowrap>16</td>
+          </tr>
+          <tr>
+            <td nowrap>ist1109725</td>
+            <td nowrap>109725</td>
+            <td nowrap>Maria Helena de Azevedo e Cunha</td>
+            <td nowrap>LENO 2021</td>
+            <td nowrap>12</td>
+            <td nowrap>7</td>
+            <td nowrap>4</td>
+            <td nowrap>AP</td>
+            <td nowrap>11</td>
+          </tr>
+          <tr>
+            <td nowrap>ist1109866</td>
+            <td nowrap>109866</td>
+            <td nowrap>Carolina Marques Vinagre</td>
+            <td nowrap>LENO 2021</td>
+            <td nowrap>14</td>
+            <td nowrap>15</td>
+            <td nowrap>4</td>
+            <td nowrap>AP</td>
+            <td nowrap>11</td>
+          </tr>
+          <tr>
+            <td nowrap>ist1109873</td>
+            <td nowrap>109873</td>
+            <td nowrap>Leonor Maria Monteiro Barata</td>
+            <td nowrap>LENO 2021</td>
+            <td nowrap>12</td>
+            <td nowrap>7</td>
+            <td nowrap>4</td>
+            <td nowrap>AP</td>
+            <td nowrap>10</td>
+          </tr>
+          <tr>
+            <td nowrap>ist1109923</td>
+            <td nowrap>109923</td>
+            <td nowrap>Henrique Carvalho Calado</td>
+            <td nowrap>LENO 2021</td>
+            <td nowrap>13</td>
+            <td nowrap>10</td>
+            <td nowrap>3</td>
+            <td nowrap>AP</td>
+            <td nowrap>13</td>
+          </tr>
+          <tr>
+            <td nowrap>ist1110011</td>
+            <td nowrap>110011</td>
+            <td nowrap>Margarida Guerreiro Condeço</td>
+            <td nowrap>LENO 2021</td>
+            <td nowrap>15</td>
+            <td nowrap>15</td>
+            <td nowrap>5</td>
+            <td nowrap>AP</td>
+            <td nowrap>10</td>
+          </tr>
+          <tr>
+            <td nowrap>ist1110121</td>
+            <td nowrap>110121</td>
+            <td nowrap>Afonso Vieira da Cunha Broco</td>
+            <td nowrap>LENO 2021</td>
+            <td nowrap>14</td>
+            <td nowrap>16</td>
+            <td nowrap>4</td>
+            <td nowrap>AP</td>
+            <td nowrap>11</td>
+          </tr>
+          <tr>
+            <td nowrap>ist1110242</td>
+            <td nowrap>110242</td>
+            <td nowrap>Miguel Cardoso Reis</td>
+            <td nowrap>LENO 2021</td>
+            <td nowrap>10</td>
+            <td nowrap>7</td>
+            <td nowrap>3</td>
+            <td nowrap>AP</td>
+            <td nowrap>7</td>
+          </tr>
+          <tr>
+            <td nowrap>ist1110402</td>
+            <td nowrap>110402</td>
+            <td nowrap>Leonardo Simões Costa</td>
+            <td nowrap>LENO 2021</td>
+            <td nowrap>13</td>
+            <td nowrap>8</td>
+            <td nowrap>4</td>
+            <td nowrap>AP</td>
+            <td nowrap>12</td>
+          </tr>
+          <tr>
+            <td nowrap>ist1110417</td>
+            <td nowrap>110417</td>
+            <td nowrap>Alexandre Lúcio Costa Manso</td>
+            <td nowrap>LENO 2021</td>
+            <td nowrap>14</td>
+            <td nowrap>5</td>
+            <td nowrap>3</td>
+            <td nowrap>AP</td>
+            <td nowrap>18</td>
           </tr>
         </tbody>
       </table>
@@ -71,7 +269,7 @@
 <footer class="container" style="border-top:1px solid #ddd; margin-top:30px">
   <div class="col-sm-9">
     <a class="brand" href="http://fenixedu.org">
-      <img width="150" height="34" src="https://fenix.tecnico.ulisboa.pt/cms/assets/fenixedu-learning-theme/117a7569aa22b88e/images/logo_fenixedu_footer.svg" alt="FenixEdu">
+      <img width="150" height="34" src="https://fenix.tecnico.ulisboa.pt/cms/assets/fenixedu-learning-theme/117a7569aa22b88e/images/logo_fenixedu_footer.svg" alt="FenixEdu" />
     </a>
   </div>
   <div class="col-sm-3" style="color:#888">
